Change color example

--- a/geonode/static/v2/css/custom.css
+++ b/geonode/static/v2/css/custom.css
@@ -3170,7 +3170,8 @@ html[dir=rtl] .item .carousel-caption{
 }
 
 .tile_count .tile_stats_count .count{
-    color:  var(--secondary-text)!important;
+    /* color:  var(--secondary-text)!important; */
+    color:  var(--primary-text)!important;
 }
 
 .red {
