--- a/geonode/static/v2/css/custom.css
+++ b/geonode/static/v2/css/custom.css
@@ -5931,3 +5931,8 @@ input#villageIDSearchForm.x-form-text.x-form-field.x-form-focus {
 .webTitle {
     margin-left: 15px;
 }
+
+
+.home h3.counting{
+    color: var(--primary-text);
+}
