fix incorrect geoserver url in development machine

--- a/geonode/templates/geonode/geo_header.html
+++ b/geonode/templates/geonode/geo_header.html
@@ -71,7 +71,8 @@ function getUserLogo(){
 }
 
 function getServerUrl(){
-    return '{% settings_value "SITEURL" %}';
+    return '{{GEOSERVER_DOMAIN}}';
+    // return '{% settings_value "SITEURL" %}';
 }
 
 
