--- a/geonode/templates/v2/partners.html
+++ b/geonode/templates/v2/partners.html
@@ -27,286 +27,13 @@
 
 	<!-- Partner -->
 	<section id="dataProvider">
-		<div class="container">
-			<h3>{% trans "Data Providers and Partners" %}</h3>
-			<p>{% trans "This list provides an insight in the main partners who have provided or are providing essential data." %}
-			{% trans "For each of the organisations the main contributions for the ASDC are listed." %}<br>
-			{% trans "Homepage | Photo credit to Bob McKerrow, description:  Teshkan Valley, Badakhshan" %}</p>
-			<p>&nbsp;</p>
-
-			<div class="row">
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/wmo.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "World Meteorological Organization (WMO) and Hydrologic Research Center" %}</h4>
-			            <p>{% trans "Flash Flood Guidiance System (FFGS) from Hydrologic Research Center" %}</p>
-			            <p>
-			            {% trans "WMO data is used for the flash flood prediction, as well as providing snow water equivalent data used to calculate snow depth" %}</p>
-			        </div>
-			    </div>
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/noa.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "National Oceanic and Atmospheric Administration (NOAA) - National Snow and Ice Data Center (NSIDC)" %}</h4>
-			            <p>{% trans "NSIDC data is used to calculate the daily snow coverage and avalanche risk. It was also used to calculate the historic snow average per month." %}</p>
-			            <p>
-			            {% trans "Global Flood Monitoring System (GFMS) is supported by NOAA and is an essential component of the flood prediction system" %}</p>
-			        </div>
-			    </div>
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/usgs.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "United States Geological Survey (USGS)" %}</h4>
-			            <p>{% trans "USGS Earthquake monitoring program, provides the historical earthquake data, latest epicentre data and shakemaps." %}</p>
-			        </div>
-			    </div>
-			</div>
-			<hr>
-			<div class="row">
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/oak.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "Oak Ridge National Laboratory" %}</h4>
-			            <p>{% trans "Provided the Landscan data, which was merged with various other datasets, to estimate population numbers at village level." %}</p>
-			        </div>
-			    </div>
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/maryland.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "University Of Maryland" %}</h4>
-			            <p>{% trans "Global Flood Monitoring System (GFMS) is maintained by the university of Maryland. The data is essential for one component of the river flood prediction in Afghanistan. NOAA and NASA are other partners which  help create this data" %}</p>
-			        </div>
-			    </div>
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/nasa.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "National Aeronautics and Space Administration (NASA)" %}</h4>
-			            <p>{% trans "Global Flood Monitoring System (GFMS) is maintained by the university of Maryland. The data is essential for one component of the river flood prediction in Afghanistan. NOAA and NASA are other partners which  help create this data." %}</p>
-			            <p>
-			            {% trans "NASA also provided SRTM and ASTER data." %}</p>
-			        </div>
-			    </div>
-			</div>
-			<hr>
-			<div class="row">
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/usaid.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "United States Agency for International Development (USAID)" %}</h4>
-			            <p>{% trans "The USAID MISTI project provided the Village Settlement database, one of the core datasets." %}</p>
-			        </div>
-			    </div>
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/japan.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "Japan: Ministry of Economy, Trade and Industry (METI)" %}</h4>
-			            <p>{% trans "METI/J-System (Japan) and NASA provided the ASTER DEM data. This data is used to create hillshading, model avalanche areas, calculate slope and subsequently road travel time." %}</p>
-			            <p>
-			            {% trans "The Advanced Spaceborne Thermal Emission and Reflection Radiometer (ASTER). The data is used to create detailed maps of land surface temperature, reflectance, and elevation." %}</p>
-			        </div>
-			    </div>
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/copernicus.png" alt="">
-			            <h4>{% trans "Joint Research Commission (JRC) - Global Flood Awareness System (GloFAS)" %}</h4>
-			            <p>{% trans "The Global Flood Awareness System (GloFAS) data is since 2017 being used to aid with flood prediction. It has a time horizon of 30 days, of which 20 days are used for our flood prediction estimates. The Global Flood Awareness System (GloFAS), jointly developed by the European Commission and the European Centre for Medium-Range Weather Forecasts." %}</p>
-			        </div>
-			    </div>
-			</div>
-			<hr>
-			<div class="row">
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/nato.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "NATO Communications and Information Agency (NCI Agency)" %}</h4>
-			            <p>{% trans "Afghanistan Flood Hazard Map was provided by NATO NCI Agency (previously NC3A), it is a crucial data set without which static flood risk and flash/river flood prediction would not be possible" %}</p>
-			            <p>
-			            {% trans "Further data data provided are basin layer." %}</p>
-			        </div>
-			    </div>
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/wfp.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "World Food Program (WFP)" %}</h4>
-			            <p>{% trans "Provided one of the initial airport datasets." %}</p>
-			        </div>
-			    </div>
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/fao.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "Food and Agriculture Organization of the United Nations (FAO)" %}</h4>
-			            <p>{% trans "Land cover dataset created by John Latham of FAO, were not only crucial in determining the general land cover, but also played an essential role in estimating the population. Furthermore, FAO data is used to assess the areas at risk of natural disasters." %}</p>
-			        </div>
-			    </div>
-			</div>
-			<hr>
-			<div class="row">
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/who.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "World Health Organisation (WHO)" %}</h4>
-			            <p>{% trans "WHO and MoPH provided the initial health facility data, which was reviewed and adjusted. This data is essential to assess accessibility." %}</p>
-			        </div>
-			    </div>
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/ocha.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "Office for the Coordination of Humanitarian Affairs (OCHA)" %}</h4>
-			            <p>{% trans "Play an essential role in coordinating, relaying information and data. Both placing these online on the various OCHA maintained portals and helping organisations reach out to iMMAP." %}</p>
-			        </div>
-			    </div>
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/iom.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "International Organization for Migration (IOM)" %}</h4>
-			            <p>{% trans "Has provided historical Rapid Assessment Form (RAF) information, which is used to calibrate the prediction model." %}</p>
-			        </div>
-			    </div>
-			</div>
-			<hr>
-			<div class="row">
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/moia.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "Ministry of Interior Affairs (MoIA)" %}</h4>
-			            <p>{% trans "Security Incident are presently mainly extracted from MoIA reports. This data is essential to assess humanitarian access. In the past there were a variety of other sources." %}</p>
-			        </div>
-			    </div>
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/moph.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "Ministry of Public Health (MoPH)" %}</h4>
-			            <p>{% trans "WHO and MoPH provided the initial health facility data, which was reviewed and adjusted. This data is essential to assess accessibility." %}</p>
-			        </div>
-			    </div>
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/mrrd.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "Ministry of Rural Rehabilitation and Development (MRRD)" %}</h4>
-			            <p>{% trans "MRRD plays an essential role in infrastructural data provision, especially segments of the rural road network." %}</p>
-			        </div>
-			    </div>
-			</div>
-			<hr>
-			<div class="row">
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/agcho.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "Afghan Geodesy and Cartography Head Office (AGCHO)" %}</h4>
-			            <p>{% trans "Provision of Administrative boundaries. AGCHO and the Independent Directorate for Local Governance (IDLG) are recognised as the sole authoritative source for legal and technical issues related to the delimitation of administrative boundaries, composition, and division of the administrative units of Afghanistan." %}</p>
-			        </div>
-			    </div>
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/cso.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "Central Statistics Organization (CSO)" %}</h4>
-			            <p>{% trans "Central Statistics Organization, Afghanistan (CSO) as NSO of any other country, is the driving force behind rebuilding an effective, robust and reliable. Its population estimates were essential in determining village allocated size." %}</p>
-			        </div>
-			    </div>
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/andma.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "Ministry of Disaster Management and Humanitarian Affairs of Afghanistan / Afghanistan National Disaster Management Authority (ANDMA)" %}</h4>
-			            <p>{% trans "Plays an essential role in coordinating and relaying information." %}</p>
-			        </div>
-			    </div>
-			</div>
-			<hr>
-			<div class="row">
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/dacaar.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "Danish Committee for Aid to Afghan Refugees (DACAAR)" %}</h4>
-			            <p>{% trans "Has collected the most extensive water well data in Afghanistan." %}</p>
-			        </div>
-			    </div>
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/osm.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "OpenStreetMap (OSM)" %}</h4>
-			            <p>{% trans "OSM provided the road network coverage in highly populated cities of Afghanistan." %}</p>
-			        </div>
-			    </div>
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/chelsa.png" alt="" style="height: 160px; width: 280px;">
-			            <p> </p>
-			            <h4>{% trans "Climatologies at High resolution for the Earth’s Land Surface Areas (CHELSA)" %}</h4>
-			            <p>{% trans "CHELSA provides ASDC with Climate and Climate Change data. CHELSA is a high resolution (30 arc sec) climate data set for the earth land surface areas currently hosted by the Swiss Federal Institute for Forest, Snow and Landscape Research WSL (Dr. Dirk N. Karger, Prof. Dr. Niklaus Zimmermann), and has been developed in coorporation with the Department of Geography of the University of Hamburg (Prof. Dr. Jürgen Böhner, Dr. Olaf Conrad, Tobias Kawohl), the University of Zurich (Dr. Michael Kessler), and the University of Göttingen (Prof. Dr. Holger Kreft)." %}</p>
-			        </div>
-			    </div>
-			</div>
-			<hr>
-			<div class="row">
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/ventusky.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "Ventusky" %}</h4>
-			            <p>{% trans "Ventusky provides wonderfully styled access to weather forecast in the ASDC dashboard and settlement inspector. It provides data for Afghanistan mostly from Deutsche Wetter Dienst ICON (7.5 km resolution), or alternatively from NOAA’s Global Forecast System GFS (15 km resolution). Ventusky is a product provided by InMeteo, a Czech meteorological company, in collaboration with Marek Mojzík and Martin Prantl" %}</p>
-			        </div>
-			    </div>
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/ecmwf.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "European Centre for Medium-Range Weather Forecasts (ECMWF)" %}</h4>
-			            <p>{% trans "The European Centre for Medium-Range Weather Forecasts (ECMWF) is an independent intergovernmental organisation supported by 34 states. It provides much of the input data for the GLOFAS data, in addition the ASDC utilizes data from other partner organisations which rely on ECMWF data (weather forecast data, climate and climate change data)." %}</p>
-			        </div>
-			    </div>
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/noaa-star.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "NOAA STAR (Satellite Applications and Research)" %}</h4>
-			            <p>{% trans "Global Vegetation Health Products" %}</p>
-			            <p>{% trans "The current drought risk map is based on the Vegetation Health (VH) Index, provided by NOAA. The VH products can be used as proxy data for monitoring vegetation health, drought and others. Due to the resolution and the modelling properties overestimation of risk will occur. The Global and Regional Vegetation Health (VH) is a NOAA/NESDIS system estimating vegetation health, moisture condition, thermal condition and their products. It contains Vegetation Health Indices (VHI) derived from the radiance observed by the VIIRS satellite." %}</p>
-			        </div>
-			    </div>
-			</div>
-			<div class="row">
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/calu.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "California University of Pennsylvania" %}</h4>
-			            <p>{% trans "California University of Pennsylvania has integrated parts of the ASDC into its Geography syllabus and has become the most prolific Educational ASDC user. Cal U uses the ASDC to teach undergraduate students basic applied geography insights within a disaster management context. The training course is being led by Professor Dr. Thomas R. Mueller, who has taught a wide variety of courses including World Regional Geography, GIS, crime mapping, demographic analysis, and spatial models in public safety." %}</p>
-			        </div>
-			    </div>
-			    <div class="col-md-4">
-			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/northeastern.png" alt="">
-			            <p> </p>
-			            <h4>{% trans "Northeastern University" %}</h4>
-			            <p>{% trans "Northeastern University has integrated parts of the ASDC into their Crisis Mapping for Humanitarian Action  syllabus. Northeastern University uses the ASDC to teach graduate students applied geography insights within a disaster management context." %}
-			        </div>
-			    </div>
-			</div>
-			<hr>
-			<p>&nbsp;</p>
-		</div>
+        <div class="container">
+            <div class="center">
+                <div style="text-transform: uppercase;font-size: xx-large;vertical-align: middle;line-height: 50vh;">
+                    Under Construction
+                </div>
+            </div>
+        </div>
 	</section>
 
 {% endblock %}
