--- a/geonode/templates/v2/training.html
+++ b/geonode/templates/v2/training.html
@@ -27,95 +27,12 @@
 
 	<!-- Training -->
 	<section id="training" class="container">
-		<div class="row">
-			<div class="col-md-9">
-				<h3>{% trans "Dedicated Training Program" %}</h3>
-				<p>{% trans "A dedicated training program is available. Make an appointment at the iMMAP offices in Kabul for basic or in-depth training. Training sessions can exist in the form of a half day introductory session, up to 3-day in-depth training sessions." %}</p>
-				<p>{% trans "Workshops are conducted  by one of our international and two of our local national ASDC experts. Therefore, the training can be delivered in both English and Dari." %}</p>
-			</div>
-			<div class="col-md-3">
-				<img src="{{ STATIC_URL }}v2/images/training5.png">
-			</div>
-		</div>
-
-		<p>&nbsp;</p>
-
-		<div class="row">
-			<div class="col-md-9">
-				<h3>{% trans "ASDC Professional User Certification program" %}</h3>
-				<p>{% trans "iMMAP has initiated the ASDC Professional User Certification program, which further expands the ASDC training program with hands-on exercises. The certification highlights user proficiency with the functionalities of the ASDC and the capability to independently advance this knowledge." %}</p>
-				<p>{% trans "The certification takes place online and consist of 80 interactive questions &#40;75&#37; passing mark&#41;, tied to various scenarios. For proficient users it will take approximately 1-2 hours to complete, whereas for novice yet trained users it can take more than 3 hours. Having seen the ASDC Training videos is a perquisite to be able to complete." %}</p>
-				<p>{% trans "In the future, the certification will be a perquisite to access the Humanitarian Access tool/data" %}</p>
-				<a href="../dashboard/classmarker" target="_blank">{% trans "Go to Certification Portal" %}</a>
-			</div>
-			<div class="col-md-3">
-				<img src="{{ STATIC_URL }}v2/images/training4.png">
-			</div>
-		</div>
-
-		<p>&nbsp;</p>
-
-		<div class="row">
-			<div class="col-md-9">
-				<h3>{% trans "ASDC University Certification Program (Introduction to ASDC)" %}</h3>
-				<p>{% trans "In Collaboration with the California University of Pennsylvania and Northeastern University, under the guidance of Professor Dr. Thomas R. Mueller the ASDC is providing testing/certification access to participating universities." %}</p>
-				<a href="../dashboard/classmarker_university" target="_blank">{% trans "Go to University Certification Portal" %}</a>
-
-				<p>&nbsp;</p>
-			</div>
-			<div class="col-md-3">
-				<div class="row">
-					<div class="col-md-6 col-xs-6 col-sm-3">
-						<img src="{{ STATIC_URL }}v2/images/partner/calu.png" alt="" class="img-responsive">
-					</div>
-					<div class="col-md-6 col-xs-6 col-sm-3">
-						<img src="{{ STATIC_URL }}v2/images/partner/northeastern.png" alt="" class="img-responsive">
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<p>&nbsp;</p>
-
-		<div class="row">
-			<div class="col-md-12">
-				<h3>Videos</h3>
-				<p>{% trans "To facilitate better communication, a Youtube channel has been made to host basic instruction videos on the functionalities of the Afghanistan Spatial Data Center (asdc.immap.org). The instruction videos can be found on YouTube and on the ASDC (available in Dari and English). Currently, there are 11 training videos, in total 1 ½ hours of material." %}</p>
-				<a href="https://www.youtube.com/channel/UCkd_swrFk9vN81s9SQ3fKgg">{% trans "Go to Youtube Channel" %}</a>
-
-				<p>&nbsp;</p>
-
-				<img src="{{ STATIC_URL }}lib/foto/training2.png" alt="">
-			</div>
-			<!-- <div class="col-md-3">
-				Gambar 1
-			</div>
-			<div class="col-md-3">
-				Gambar 2
-			</div>
-			<div class="col-md-3">
-				Gambar 1
-			</div>
-			<div class="col-md-3">
-				Gambar 2
-			</div> -->
-		</div>
-
-		<p>&nbsp;</p>
-
-		<div class="row">
-			<div class="col-md-6">
-				<h3>{% trans "Flood Hazard Analysis using Afghanistan Spatial Data Center" %}</h3>
-				<p>{% trans "Created by: California University of Pennsylvania Students - Adam Wells, Gabrielle Salerni, John Beattie, and Janay Myers And Thomas R. Mueller, Ph.D., GISP Geography Professor" %}</p>
-				<p>{% trans "Give a structured overview and exercises for geospatial analysis using the ASDC." %}</p>
-			</div>
-			<div class="col-md-6">
-				<center>
-					<iframe src="https://docs.google.com/viewer?srcid=1tJhrtBgXs0TPeCw9gOxHR5bBsDwBMzJI&pid=explorer&efh=false&a=v&  chrome=false&embedded=true" style="width:460px; height:600px;" frameborder="0"></iframe>
-				</center>
-			</div>
-		</div>
-
+        
+        <div class="center">
+            <p style="text-transform: uppercase;font-size: xx-large;vertical-align: middle;line-height: 50vh;">
+                Under Construction
+            </p>
+        </div>
 		
 	</section>
 
