Change to official new asdc name

--- a/geonode/templates/v2/index.html
+++ b/geonode/templates/v2/index.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 {% load base_tags %}
 
-{% block title %} {% trans "Afghanistan Spatial Data Center" %} - {{ block.super }} {% endblock %}
+{% block title %} {% trans "Afghanistan Natural Hazard Data Center" %} - {{ block.super }} {% endblock %}
 
 {% block body_class %}home{% endblock %}
 {% block body_extra_attr %}ng-app="featured"{% endblock %}
