--- a/geonode/templates/v2/index.html
+++ b/geonode/templates/v2/index.html
@@ -289,7 +289,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="center">
-					<h3>{% trans "New to ASDC? Check our documentation for having a better understanding how useful our tools are." %}</h3>
+					<h3>{% trans "New to ANHDC? Check our documentation for having a better understanding how useful our tools are." %}</h3>
 					<a href="{% url 'v2:documentation' %}" class="btn btn-primary">{% trans "Watch Tutorial" %}</a>
 					<a href="{% url 'v2:documentation' %}" class="btn btn-primary">{% trans "See Documentation" %}</a>
 				</div>
