Change the logo title to new one logo title

--- a/geonode/templates/v2/base.html
+++ b/geonode/templates/v2/base.html
@@ -86,8 +86,7 @@
                     <img src="{{ STATIC_URL }}v2/images/USAID-Identity_reduce.png">
                   </a> -->
                   <a id="logo2" class="navbar-brand-immap" href="{% url 'v2:home' %}">
-                    <img src="{{ STATIC_URL }}v2/images/ANDMA.png">
-                    <!-- <h1 class="webTitle">{% trans "Afghanistan Spatial Data Center" %}</h1> -->
+                    <img src="{{ STATIC_URL }}v2/images/ANDMA_LOGO.png">
                     <h1 class="webTitle">{% trans "Afghanistan Natural Hazard Data Center" %}</h1>
                   </a>
                 </div>
