--- a/geonode/templates/geonode/geo_header.html
+++ b/geonode/templates/geonode/geo_header.html
@@ -14,7 +14,7 @@
 <script src="{{STATIC_URL}}lib/js/usng.js" type="text/javascript"></script>
 <script src="{{STATIC_URL}}lib/js/SearchField.js" type="text/javascript"></script>
 <!-- <script src="{{STATIC_URL}}lib/js/GeoExplorer-min.js" type="text/javascript"></script> -->
-<script src="{{STATIC_URL}}lib/js/GeoExplorer.js" type="text/javascript"></script>
+<script src="{{STATIC_URL}}lib/js/GeoExplorer.js?timestamp=20200716" type="text/javascript"></script>
 <script src="{{STATIC_URL}}lib/js/GeoExplorer_add.js" type="text/javascript"></script>
 <script type="text/javascript">
 OpenLayers.ImgPath = "{{ STATIC_URL }}geoexplorer/externals/openlayers/theme/default/img";
