add edited page for training

--- a/geonode/templates/v2/about.html
+++ b/geonode/templates/v2/about.html
@@ -29,7 +29,9 @@
 	<section id="about" class="container">
 	    <div class="center">
             <p style="text-transform: uppercase;font-size: xx-large;vertical-align: middle;line-height: 50vh;">
-                Under Construction
+				Under Construction
+				
+				This is just edited
             </p>
         </div>
 	</section>
