test change and about.html page

--- a/geonode/templates/v2/about.html
+++ b/geonode/templates/v2/about.html
@@ -28,6 +28,8 @@
 	<!-- About Us -->
 	<section id="about" class="container">
 	    <div class="center">
+
+			<h3>About Page are Under Construction</h3>
             <p style="text-transform: uppercase;font-size: xx-large;vertical-align: middle;line-height: 50vh;">
 				Under Construction
 				
