--- a/geonode/templates/v2/base.html
+++ b/geonode/templates/v2/base.html
@@ -249,7 +249,7 @@
                     <ul class="list-unstyled address">
                         <li>
                             <i class="fa fa-envelope"></i>
-                            <strong>Email: </strong> afghanistan@immap.org
+                            <strong>Email: </strong> {{ THEME_ACCOUNT_CONTACT_EMAIL }}
                         </li>
                         <li>
                             <i class="fa fa-globe"></i>
