--- a/geonode/templates/account/admin_approval_sent.html
+++ b/geonode/templates/account/admin_approval_sent.html
@@ -1,13 +1,31 @@
-{% extends "site_base.html" %}
+{% extends "site_base_p.html" %}
 
 {% load url from future %}
 {% load i18n %}
 
 {% block head_title %}{% trans "Account Pending Approval" %}{% endblock %}
 
-{% block body %}
-    <h2>{% trans "Account Pending Approval" %}</h2>
+{% block body_outer %}
+    <!-- Title -->
+	<section class="title">
+	    <div class="container">
+	        <div class="row">
+	            <div class="col-md-6">
+	                <h1>{% trans "Account Pending Approval" %}</h1>
+	            </div>
+	            <div class="col-md-6">
+	                <ul class="breadcrumb pull-right">
+	                    <li class="active">{% trans "Account Pending Approval" %}</li>
+	                </ul>
+	            </div>
+	        </div>
+	    </div>
+    </section>
 
-    <p>{% blocktrans %}We have sent the administrators a notice to approve your account associated with <b>{{ email }}</b>. If the account is approved, you will receive a confirmation notice.{% endblocktrans %}</p>
-    <p><a href="{{ success_url }}">Go back</a></p>
+    <section>
+        <div class="container">
+            <p>{% blocktrans %}We have sent the administrators a notice to approve your account associated with <b>{{ email }}</b>. If the account is approved, you will receive a confirmation notice.{% endblocktrans %}</p>
+            <p><a href="{{ success_url }}">Go back</a></p>
+        </div>
+    </section>
 {% endblock %}
