--- a/geonode/templates/account/admin_approval_sent.html
+++ b/geonode/templates/account/admin_approval_sent.html
@@ -22,10 +22,12 @@
 	    </div>
     </section>
 
-    <section>
+    <section class="min-height-empty">
         <div class="container">
-            <p>{% blocktrans %}We have sent the administrators a notice to approve your account associated with <b>{{ email }}</b>. If the account is approved, you will receive a confirmation notice.{% endblocktrans %}</p>
-            <p><a href="{{ success_url }}">Go back</a></p>
+            <div class="center vertical-center">
+                <p class="lead">{% blocktrans %}We have sent the administrators a notice to approve your account associated with <b>{{ email }}</b>.<br>If the account is approved, you will receive a confirmation notice.{% endblocktrans %}</p>
+                <a href="{{ success_url }}" class="btn btn-primary">Go back</a>
+            </div>
         </div>
     </section>
 {% endblock %}
